<resources>
    <string name="app_name">RemoteControlForSumoBot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mode_chooser">modeChooser</string>

    <string name="title_drive">Drive Remote</string>
    <string name="button_drive1">foreward</string>
    <string name="button_drive2">left</string>
    <string name="button_drive3">right</string>
    <string name="button_drive4">backward</string>
    <string name="button_drive5">stop</string>

    <string name="title_PID">PID Settings</string>
    <string name="button_P_send">P value:</string>
    <string name="button_D_send">D value:</string>
    <string name="button_I_send">I value:</string>
    <string name="buttonPIDsend">send</string>

    <string name="title_Battle">Zumo Battle preparation</string>
    <string name="btn_calibrate">calibrate Reflectance</string>
    <string name="btn_battleStart">enter Battle Mode</string>
    <string name="btn_battleEnd">exit Battle Mode</string>


</resources>
