<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:padding="10dp">

    <Button
        android:id="@+id/Btn_calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calibrate"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/Btn_enterBattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_battleStart"
        android:background="@color/red"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/Btn_exitBattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_battleEnd"
        android:layout_margin="10dp"/>

</LinearLayout>